@@ -8,6 +8,8 @@
 	in module loading.
 	(dt_module_getctf): Only try to load the module if it's not
 	already loaded: try to load it before checking CTF state.
+	(dt_module_shuffle_to_start): New function.
+	(dtrace_update): Call it.
 
 2012-07-21  Nick Alcock  <nick.alcock@oracle.com>
 
